fixed spacing

--- a/src/DesignPrompt.css
+++ b/src/DesignPrompt.css
@@ -20,7 +20,7 @@ h1 {
     font-weight: 400;
     text-align: center;
     margin-top: 32px;
-    margin-bottom: 80px;
+    margin-bottom: 68px;
 }
 
 .logo {
